# distribuidos_cloud

./: .gitignore  Dockerfile  README.md  config.py  entrypoint.sh  pyproject.toml  render.yaml  seed.py  wsgi.py
app/: __init__.py  auth.py  models.py  routes.py
app/models/: __init__.py  compromiso.py  coverage.py  ong.py  pedido_colaboración.py  project.py  workplan.py
migrations/versions/: 1800c7f0b5d9_final.py  92d6c1f92cee_final.py  b942633535b5_creacion_inicial_de_tablas.py  bc992867f5aa_creacion_inicial_de_tablas.py
